# Mlops-Project

./: .env.secrets.template  .env.template  .gitignore  .secrets  Dockerfile.streamlit  README.md  app.py  config.yaml  config.yaml.template  docker-compose.dev.yml  env.secrets.template  pyproject.toml  start_app.sh
docs/: db_schema.drawio  infra_flux_draft.wsd  sequence_diagram.wsd  technical_stack.wsd  technical_stack2.wsd
dsdc/: __init__.py  import_iit_files.py  import_rvl_document_list.py  ingest.py  utils.py
dsdc/data/: compute_embeddings.py  extract_text.py  ingest.py  mock.py  preprocess_image.py  preprocess_text.py  process_image.py  process_text.py
dsdc/db/: __init__.py  crud.py  models.py
dsdc/db/crud/: embeddings.py  labels.py  original_documents.py  processed_images.py  processed_texts.py  raw_texts.py
dsdc/image/: preprocess.py  process.py
dsdc/models/: clip.py  clip_mlp.py  mlp.py  mlp_params.py  train.py
dsdc/scripts/: download_clip.py  generate_dot_env.py  generate_init_dbs_sql.py
dsdc/utils/: config.py  project_files.py
grafana-12.1.1/conf/: defaults.ini  sample.ini
grafana-12.1.1/npm-artifacts/: @grafana-alerting-v12.1.1.tgz  @grafana-data-v12.1.1.tgz  @grafana-e2e-selectors-v12.1.1.tgz  @grafana-flamegraph-v12.1.1.tgz  @grafana-i18n-v12.1.1.tgz  @grafana-prometheus-v12.1.1.tgz  @grafana-runtime-v12.1.1.tgz  @grafana-schema-v12.1.1.tgz  @grafana-ui-v12.1.1.tgz
grafana-12.1.1/storybook/: 1605.aae96db4.iframe.bundle.js  1748.1bdde8bc.iframe.bundle.js  2014.60cb3a4d.iframe.bundle.js  206.b24222db.iframe.bundle.js  2157.f61b3ae9.iframe.bundle.js  2434.856a6a02.iframe.bundle.js  250.1da61ff0.iframe.bundle.js  2575.04b98828.iframe.bundle.js  2641.f1a82500.iframe.bundle.js  2687.65ae55c1.iframe.bundle.js  2722.a349c032.iframe.bundle.js  2957.074eda13.iframe.bundle.js  2962.123db5eb.iframe.bundle.js  3035.b5b34b71.iframe.bundle.js  3072.518a94d4.iframe.bundle.js  3095.9c6834a5.iframe.bundle.js  3124.c54db68e.iframe.bundle.js  3284.c1ffbf9a.iframe.bundle.js  329.d828f8b1.iframe.bundle.js  3448.c4d0e2e1.iframe.bundle.js  3467.029352a8.iframe.bundle.js  3667.3665f1c4.iframe.bundle.js  3686.370c4279.iframe.bundle.js  3801.b14b43f3.iframe.bundle.js  398.a6b39ed2.iframe.bundle.js  4031.83b27455.iframe.bundle.js  405.4598c93a.iframe.bundle.js  4323.6d98cf3b.iframe.bundle.js  4366.a8bac0a6.iframe.bundle.js  4526.309029e2.iframe.bundle.js  4669.d4383a88.iframe.bundle.js  4979.8c48805f.iframe.bundle.js  5143.b0deb972.iframe.bundle.js  5183.41b59939.iframe.bundle.js  5382.14ab0e13.iframe.bundle.js  568.06121fdb.iframe.bundle.js  5833.5f621afb.iframe.bundle.js  6040.b94f96d8.iframe.bundle.js  6062.7477ddb2.iframe.bundle.js  6075.f8c92dd2.iframe.bundle.js  (+163 more)
mlruns/0/: meta.yaml
mlruns/0/70b4d952c4e14bbc9584c11842cbe659/: meta.yaml
mlruns/0/cb6782c9e3e0463c878caaaa2c34c001/: meta.yaml
mlruns/226525954868546167/: meta.yaml
scripts/: configure.sh  generate_env.sh  hard_reset.sh  initialize.sh  install.sh  loop.sh  prepare.sh  setup.sh  start.sh  stop.sh  utils.sh
scripts/subscripts/: generate_venv.sh  initialize_postgres.sh  set_project_dir.sh  utils.sh
scripts/templates/: .secrets  config.yaml
services/: docker-compose.yaml
services/airflow/: Dockerfile  config.yaml  pyproject.toml
services/airflow/config/: airflow.cfg
services/airflow/dags/: mock_new_data.py  process_data.py  test_services.py  train.py
services/api/: Dockerfile  main.py  requirements.api
services/auth/: Dockerfile  main.py  pyproject.toml
services/compute-clip-embeddings/: Dockerfile  main.py  pyproject.toml
services/compute_clip_embeddings/: Dockerfile  config.yaml  main.py
services/extract-text/: Dockerfile
services/extract_text/: Dockerfile  main.py
services/k8s/: api-deploy.yaml  auth-deploy.yaml  grafana-deploy.yaml  ingress.yaml  mlflow-deploy.yaml  postgres-statefulset.yaml  prometheus-deploy.yaml  services.yaml
services/mlflow/: Dockerfile  entrypoint.sh
services/predict/: Dockerfile  config.yaml  main.py  pyproject.toml
services/process-image/: Dockerfile  main.py  pyproject.toml
services/process-text/: Dockerfile  main.py  pyproject.toml
services/process_image/: Dockerfile  main.py
services/process_text/: Dockerfile  config.yaml  main.py
services/prometheus/: prometheus.yml
services/streamlit/: Dockerfile  main.py  pyproject.toml
services/train/: Dockerfile  main.py  pyproject.toml
tests/: test_compute-clip-embeddings.py  test_extract-text.py  test_postgres.py  test_process-image.py  test_process_text.py  test_rvl_csv_import.py  to_fix_auth.py
tests/sample/: rvl_aaa06d00_original.tif  rvl_aaa06d00_processed_text.txt  rvl_aaa06d00_raw_text.txt
(+127 files in other folders)
