[project]
name = "dsdc"
version = "0.1.0"
description = "DataScientest Document Classification Project"
requires-python = "==3.13.*"
readme = "README.md"
license = "MIT"
authors = [
  { name = "AL"},
  { name = "BH"},
]

dependencies = [
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dsdc*"]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pytest>=8.4.2",
]
